--- a/src/CadpazBundle/Resources/views/Telefone/new.html.twig
+++ b/src/CadpazBundle/Resources/views/Telefone/new.html.twig
@@ -44,6 +44,6 @@
             e.preventDefault();
         });
         jQuery(function($){
-                $("#cadpazbundle_telefone_numero").mask("(99) 9999-9999?9",{placeholder:"(__) ____-_____"});
+                $("#cadpazbundle_telefone_numero").mask("(99) 099999999",{placeholder:"(__) _________"});
             });
     </script>
