Relatorios personalizados e correcoes no cadastro de telefone e endereco

--- a/src/CadpazBundle/Resources/views/Endereco/new.html.twig
+++ b/src/CadpazBundle/Resources/views/Endereco/new.html.twig
@@ -57,14 +57,7 @@
 
         function showNewEnderecoResponse(responseText, statusText, xhr, $form)  { 
 
-
-
-
-                $("#userDetails").html(responseText);
-                //$("#userDetails").hide();
-                //$("#userDetails").css('visibility','visible');
-                //$("#userDetails").slideUp(400);
-                //$("#userDetails").delay(600).slideDown(400);
+                $("#endereco_area").html(responseText);
             }
          
         function beforeSubmitEnderecoForm(formData, jqForm, options) {
