--- a/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
@@ -152,16 +152,10 @@
                 <div id="new_telefone_area"></div>
                 <div id="telefone_area">
                 
-                {% for telefone in pessoa.telefones %}
-                    <div class="telefone_endereco_secao">
-                        Numero: {{ telefone.numero }}<br />
-                        Tipo: {{ telefone.tipo }}<br />
-                        {{ telefone.padrao ? "Telefone padrão<br>" : "" }}
-                        Obs: {{ telefone.obs }}
-                    </div>
-                    <div class="spacer"></div>
-                {% endfor %}
+                    {% render controller('CadpazBundle:Telefone:index', {'pessoa_id': pessoa.id}) %}
+                
                 </div>
+                
                 <!--<div class="spacer"></div>-->
                 <strong>Endereços</strong>
                 <div style="float: right">
@@ -175,20 +169,8 @@
                 <div id="new_endereco_area"></div>
                 <div id="endereco_area">
                 
-                {% for endereco in pessoa.enderecos %}
-                    <div class="telefone_endereco_secao">
-                        {{ endereco.nome }}<br />
-                        {{ endereco.padrao ? "Endereço padrão<br>" : "" }}
-                        {{ endereco.logradouro }}, {{ endereco.numero }}<br />
-                        {{ endereco.bairro }}<br />
-                        {{ endereco.complemento is null ? "" : endereco.complemento ~ "<br>"}}
-                        {{ endereco.cep }}<br />
-                        {{ endereco.municipio }} - {{ endereco.uf }}<br />
-                        {{ endereco.obs }}
-                        {% set end = 1 %}
-                    </div>
-                     <div class="spacer"></div>
-                {% endfor %}
+                    {% render controller('CadpazBundle:Endereco:index', {'pessoa_id': pessoa.id}) %}
+                
                 </div>
                 {#{% set end = null %}
                 {% for endereco in pessoa.enderecos %}
