--- a/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
@@ -202,7 +202,7 @@
                             transitionClose: 'slideBack',
                             zindex: 9999,
                             onClose: function() {
-                                content.empty();
+                                //content.empty();
                                 $("#filtroRelForm").remove();
                             }
                         });
