--- a/web/bundles/cadpaz/css/geral.css
+++ b/web/bundles/cadpaz/css/geral.css
@@ -278,26 +278,30 @@ h2 {
 }
 
 
-/*
-.example thead {
+
+.relatorios thead {
     
     background: #ddeeff;
     
     
     box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
 }
-.example tbody {
+
+/*.relatorios tbody {
     
     background: #f0f0f0;
     border: 1px solid;
     
     box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
-}
-tr:hover td {
+}*/
+.relatorios tr:hover {
     background:#fff;
-        cursor: pointer;
-};
-*/
+    /*cursor: pointer;*/
+    border: 1px dotted;
+}
+.relatorios tbody tr:nth-child(odd)	{ background-color:#efefef; }
+.relatorios tbody tr:nth-child(even)	{ background-color:#d0d0d0; }
+
 
 
 #example {
@@ -316,16 +320,7 @@ tr:hover td {
 #example tbody tr:nth-child(odd)		{ background-color:#efefef; }
 #example tbody tr:nth-child(even)	{ background-color:#e0e0e0; }
 
-/*
-#example thead{
-    background-color: #f8f8f8;
-    cursor: pointer;
-}
 
-#example tbody{
-    background-color: #eee;
-    cursor: pointer;
-}*/
 
 /*
 a{
