--- a/web/bundles/cadpaz/css/print.css
+++ b/web/bundles/cadpaz/css/print.css
@@ -8,6 +8,12 @@
         display: block;
     }
     
+    .rodape {
+        font-size: small;
+        text-align: right;
+        display: block;
+    }
+    
     .titulo {
         font-size: x-large;
         font-weight: bold;
@@ -21,18 +27,29 @@
     
     table
     {
-       border-collapse:collapse;
-       border: 1px solid;
+       
     }
     
-    td, th {
-        border: solid 1px black;
-      }
+    thead {
+        background-color: #c0c0c0;
+    }
     
+    tbody {
+        font-size: small;
+    }
+    
+    
+    
+    td { border-bottom: 1px dotted;}
 }
 
 @media screen {
     .printLogo {
+        display: none;
+    }
+    
+    .rodape
+    {
         display: none;
     }
 }
